--- a/content/entendiendo-react-hooks.mdx
+++ b/content/entendiendo-react-hooks.mdx
@@ -29,7 +29,7 @@ El Hook `useState` te permite añadir estado a componentes funcionales.
 
 The `useState` Hook lets you add state to functional components.
 
-\`\`\`jsx
+```jsx
 import React, { useState } from 'react';
 
 function Counter() {
@@ -44,7 +44,7 @@ function Counter() {
     </div>
   );
 }
-\`\`\`
+```
 
 ### `useEffect`
 
@@ -52,7 +52,7 @@ El Hook `useEffect` te permite realizar efectos secundarios en componentes funci
 
 The `useEffect` Hook lets you perform side effects in functional components. It is a replacement for `componentDidMount`, `componentDidUpdate`, and `componentWillUnmount`.
 
-\`\`\`jsx
+```jsx
 import React, { useState, useEffect } from 'react';
 
 function Example() {
@@ -71,7 +71,7 @@ function Example() {
     </div>
   );
 }
-\`\`\`
+```
 
 ## Otros Hooks / Other Hooks
 
@@ -84,4 +84,4 @@ React also provides other Hooks like `useContext`, `useReducer`, `useCallback`, 
 Los Hooks son una adición poderosa a React que promueve la reutilización de lógica con estado y hace que los componentes funcionales sean más capaces.
 
 Hooks are a powerful addition to React that promotes stateful logic reuse and makes functional components more capable.
-\`\`\`
+
