--- a/content/mi-primer-articulo.mdx
+++ b/content/mi-primer-articulo.mdx
@@ -28,13 +28,14 @@ On this blog, I will cover a variety of topics related to software development, 
 
 Aquí tienes un pequeño ejemplo de código en JavaScript:
 
-\`\`\`javascript
+```javascript
 function greet(name) {
   console.log(`Hello, ${name}!`);
 }
 
 greet("World");
-\`\`\`
+```
+
 
 Espero que disfrutes leyendo mis artículos tanto como yo disfruto escribiéndolos. ¡No dudes en dejar tus comentarios!
 
@@ -45,4 +46,4 @@ I hope you enjoy reading my articles as much as I enjoy writing them. Feel free 
 Gracias por leer. ¡Mantente atento a más contenido!
 
 Thanks for reading. Stay tuned for more content!
-\`\`\`
+
